re-formatted 2nd itinerary form page (adding trending spots) and fixed alignment issues. changed button styling

--- a/css/final-style.css
+++ b/css/final-style.css
@@ -777,12 +777,8 @@ ion-icon {
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom:1rem;
-    }
 
-  .my-itinerary{
-     align-content: center;
     }
-
   .my-itinerary h1{
     padding-left: 2rem;
     font-size: 25px;
@@ -839,6 +835,7 @@ ion-icon {
         }
       .sample-saved-activities h1{
         padding-left: 2rem;
+        padding-bottom:1rem;
         font-size: 25px;
         text-align: left;
         }
@@ -876,6 +873,27 @@ ion-icon {
     padding-left:8rem;
     padding-right:8rem;
 }
+.itin-form-card-container{
+    margin-top: 1rem;
+}
+.trending-spots-form h1{
+    text-align: center;
+}
+label[for="add-place"] {
+    font-weight: bold;
+    font-size: larger;
+    padding-left: 0rem;
+}
+.form-card-button{
+        color: white;
+        text-decoration: none;
+        background: #3498db;
+        padding: 8px 15px;
+        border-radius: 5px;
+        display: inline-block;
+        margin-top: 25px;
+        margin-bottom: 10px;
+}
 
 .form-container {
     border-radius: 10px;
@@ -883,7 +901,7 @@ ion-icon {
     padding: 3rem;
     margin-bottom: 0rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    padding-top:5rem;
+    padding-top:3rem;
     padding-left:2rem;
     padding-right:2rem;
     text-align:left;
@@ -898,6 +916,16 @@ ion-icon {
     box-sizing: border-box;
     margin-top: 6px;
     margin-bottom: 20px; 
+  }
+  input[type="submit"][value="Next"]{
+        color: white;
+        text-decoration: none;
+        background: green;
+        padding: 8px 15px;
+        border-radius: 5px;
+        display: inline-block;
+        margin-top: 25px;
+        margin-bottom: 10px;
   }
   
 /* Media Queries */
